--- a/style.css
+++ b/style.css
@@ -4,18 +4,23 @@
 }
 body{ 
     background-color: gray;
+    border-radius: 8px;
     text-align: center;
     font-size: 20px;
     border: solid black;
 }
 .resultado{
-    font-size: 70px;
+    font-size: 170px;
 }
 .add{
-    font-size: 35px;
+    font-size: 25px;
+    text-align: right;
+    border-radius: 5px;
 }
 .dim{
-    font-size: 35px;
+    font-size: 25px;
+    text-align: left;
+    border-radius: 5px;
 }
 .titulo{
     font-size: 80px;
