--- a/style.css
+++ b/style.css
@@ -16,14 +16,24 @@ body {
 }
 
 .add {
-    font-size: 25px;
+    font-size: 32px;
     text-align: right;
     border-radius: 5px;
+    background-color: blue;
+    border: solid black;
 }
 
 .dim {
-    font-size: 25px;
+    font-size: 32px;
     text-align: left;
+    border-radius: 5px;
+    background-color: red;
+    border: solid black
+}
+
+.clear {
+    font-size: 45px;
+    text-align: center;
     border-radius: 5px;
 }
 
